[package]
name = "vban_transceiver"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.16.0"
# Cannot bump to 0.19.x until the change with https://github.com/sharksforarms/deku/pull/561 is released (0.19.2 most likely)
deku = "0.18.1"
num_enum = "0.7.3"
ringbuf = "0.4.8"
strum = { version = "0.27.1 ", features = ["derive"] }
