[package]
name = "vban_transceiver"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.25.0"
cpal = { version = "0.17.3", features = ["audio_thread_priority"] }
deku = "0.20.3"
ringbuf = "0.4.8"
strum = { version = "0.28.0", features = ["derive"] }

[profile.release]
lto = "thin"
